--- a/report/Theory/theory.tex
+++ b/report/Theory/theory.tex
@@ -105,24 +105,25 @@ We want to detect end-line and internal rhyme, as described in section \ref{sec:
 
 First we collect the pronunciations of the words for which we wish to build a rhyme scheme. For end-line, we collect the last word of each line of the poem. For internal rhyme, we collect the all the words in a particular stanza.
 
-Once we have our list, we can run it through Algorithm BLAH.
+Once we have our list, we can run it through the following algorithm:
 
-1 for each word in the list:\\
-2 	for each pronunciation of the word:\\
-3		for each phoneme in the pronunciation:\\
-4			if this phoneme is stressed:\\
-5				get the tail of the pronunciation from this phoneme onwards\\
-6				get the rhyme phoneme pattern of this tail\\
-7				if we have seen this pattern before: \\
-8					assign it the corresponding rhyme token\\
-9				else:\\
-10					assign this pattern a new rhyme token\\
-11				\\
-12				append this token to a set of possible tokens for this word\\				
-13	append the set of possible tokens for this word to the unzipped rhyme scheme\\
-14 build all possible permutations of rhyme scheme from they unzipped rhyme scheme\\
-15 normalise the rhyme schemes\\
-	
+\begin{verbatim}
+1 for each word in the list:
+2   for each pronunciation of the word:
+3     for each phoneme in the pronunciation:
+4	    if this phoneme is stressed:
+5       get the tail of the pronunciation from this phoneme onwards
+6       get the rhyme phoneme pattern of this tail
+7       if we have seen this pattern before: 
+8         assign it the corresponding rhyme token
+9       else:
+10        assign this pattern a new rhyme token
+11			
+12      append this token to a set of possible tokens for this word			
+13  append the set of possible tokens for this word to the unzipped rhyme scheme
+14 build all possible permutations of rhyme scheme from they unzipped rhyme scheme
+15 normalise the rhyme schemes
+\end{verbatim}
 There are a few tricks to this algorithm, namely obtaining the rhyme phoneme pattern on line 6 and the process of building and normalising the rhyme scheme in lines 12 to 15. These processes are explained in the coming sections.
 
 \subsection{Obtaining the Rhyme Phoneme Pattern}
@@ -130,12 +131,12 @@ There are a few tricks to this algorithm, namely obtaining the rhyme phoneme pat
 Words rhyme when both of the following conditions are met:
 \begin{itemize}
 \item{the last phoneme of each word match}
-\item{the vowel sounds after and including the first \textit{stressed} syllable match \textbf{in order}}
+\item{the vowel sounds from the first \textit{stressed} syllable match \textbf{in order}}
 \end{itemize}
 
-The algorithm finds the first stressed syllable in line 4. At that point we only need to iterate through the rest of the pronunciation, checking the vowel sounds and the last phonemes. Putting them together, in order, gives the unique rhyme phoneme pattern. 
+The algorithm finds the first stressed syllable in lines 3 and 4. Once it is found, we iterate through the rest of the pronunciation, checking the \textit{vowel} sounds and the \textit{last} phoneme. Putting them together, in order, gives the rhyme phoneme pattern, which we can compare directly to find matching rhymes. 
 
-For EXAMPLE strategy and tragedy, kite and height - colourful diagrams!			
+FOR EXAMPLE, STRATEGY AND TRAGEDY, KITE AND HEIGHT, TURTLE AND PURPLE		
 
 \subsection{Building and Normalising the Rhyme Scheme}
 
@@ -182,7 +183,7 @@ We narrow this down by taking away any occurrences of the same stress three or m
 
 Like with rhyme, we do not make a claim for any stress pattern to be more likely than any other at this stage.
 
-FIGURE of possible stress patterns for first line of cat and limerick
+FIGURE OF POSSIBLE STRESS PATTERNS FOR FIRST LINE OF CAT AND LIMERICK
 
 
 \section{Sound Devices}
@@ -195,23 +196,23 @@ The only difference is that assonance only looks at \textit{vowel} phonemes (i.e
 
 For example, take the phrase \textit{"Slither slather"}:
 \begin{itemize}
-\item{\textbf{Consonance}: The phonemes \textit{'S'}, \textit{'L'} and \textit{'DH'} occur twice.}
-\item{\textbf{Assonance}: The phoneme \textit{'ER0'} occurs twice.}
-\item{\textbf{Alliteration}: The phonemes \textit{'S'} and \textit{'L'} occur twice each at the start of the word.}
+\item{\textbf{Consonance}: The phonemes \textit{S}, \textit{L} and \textit{DH} occur twice.}
+\item{\textbf{Assonance}: The phoneme \textit{ER0} occurs twice.}
+\item{\textbf{Alliteration}: The phonemes \textit{S} and \textit{L} occur twice each at the start of the word.}
 \end{itemize}
 
-Common phrases like \textit{'take away'} would give an assonance score on the \textit{'EY1'} phoneme, which may not be intended. Therefore, we put a condition that we the occurrence counts for each sound device must be greater than 2. For example, consonance has a total occurrence score of six, assonance of two and alliteration of four. Therefore, the assonance would not be recognised.
+Common phrases like \textit{'take away'} would give an assonance score on the \textit{EY1} phoneme, which may not be intended. Therefore, we put a condition that we the occurrence counts for each sound device must be greater than 2. For example, consonance has a total occurrence score of six, assonance of two and alliteration of four. Therefore, the assonance would not be recognised.
 
 Take another example: \textit{"Mammals named Sam are clammy"}
 \begin{itemize}
-\item{\textbf{Consonance}: \textit{'M'} occurs five times while \textit{'L'} occurs twice.}
-\item{\textbf{Assonance}: The phoneme \textit{'AE1'} occurs thrice.}
+\item{\textbf{Consonance}: \textit{M} occurs five times while \textit{L} occurs twice.}
+\item{\textbf{Assonance}: The phoneme \textit{AE1} occurs thrice.}
 \item{\textbf{Alliteration}: None.}
 \end{itemize}
 
 \section{Form}
 
-We implement some detectors for the form and structure of the poem. This does not include analysis of words and phrases themselves as that will be done in the next phase, as described in section BLAHINTHEINTERPRETATION.
+We implement some detectors for the form and structure of the poem.
 
 \subsection{Structure and Repetition}
 
@@ -245,6 +246,11 @@ The tense of each line can be found by analysing the verb in that sentence. CLiP
 We record the tense of each line as well as the overall tense of the poem. Each line in the cat poem in Figure \ref{fig:cat} is in past tense giving a past tense overall. The limerick in Figure \ref{fig:limerick} is in present tense overall because all but one line, is in present tense. 
 
 
+\subsection{N-Grams}
+
+\subsection{Topics}
+
+
 \section{Characters and Context}
 \label{sec:chars}
 Here we describe our approach to determining the context of the poem in terms of its characters and their relationships as described in section \ref{sec:pragpers}. The aim is to build a representation of the characters much like the conceptual networks described in Section \ref{sec:common-sense-bg}. This will then be compared in the abstraction phase to find a correlation between these representations and collections of poetry.
@@ -273,7 +279,7 @@ The semantic relations between persona in this project are based on those used i
 \item[MakesSound] \hfill \\ What sound does the character make? Used for onomatopoeia detection \ref{sec:ono} \hfill \\ bird - MakesSound $\rightarrow$ tweet
 \end{description}
 
-Each of these relationships has its corresponding inverse, e.g. NotIsA. 
+Each of these relationships has its corresponding inverse, e.g. \textit{NotIsA}. 
 
 We want to use this representation to guide the generation process. To do this, we must analyse these relationships in existing poems and find correlations between them in the interpretation phase. For example, we may find that \textit{Named} relations tend to occur in the first line of a poem, or what relation should be created if we need to extend the content of the poem.  
 
@@ -318,12 +324,12 @@ We use SEMAFOR and TurboParser in conjunction via Noah's ARK to extract semantic
 
 We can use the SEMAFOR tool to derive the semantic relations by looking for the occurrence of corresponding FrameNet frames, and elements therein. The manually chosen list of frames and elements that translate directly into a particular relation is given in the Appendix, section \ref{sec:fntocn}.
 
-Each list may not be exhaustive for its corresponding ConceptNet relation and there are some relations that will not be picked up by this method.
+Each list may not be exhaustive for its corresponding semantic relation and there are some relations that will not be picked up by this method.
 
 \subsubsection{Semantic Dependency Relations using TurboParser}
 \label{sec:turbo}
 
-SEMAFOR is trained on FrameNet. As explained in Section \ref{sec:bg-framenet}, FrameNet is still in ongoing research and may not find all of the semantic relations between words. In this case, we use the Stanford Dependencies syntactical parse to infer semantic information in attempt to fill the gaps left by the frame-semantic parse. We use the following heuristics:
+SEMAFOR is trained on FrameNet. As explained in Section \ref{sec:fn}, FrameNet is still in ongoing research and may not find all of the semantic relations between words. In this case, we use the Stanford Dependencies syntactical parse to infer semantic information in attempt to fill the gaps left by the frame-semantic parse. We use the following heuristics:
 
 \begin{description}
 \item[governor - HasProperty $\rightarrow$ dependent]  \hfill \\
@@ -563,22 +569,24 @@ To accentuate the persona-centred structure, we can represent the desired output
 
 This will help guide the generation phase because we will know the \textit{number of persona} typical for a collection of poems, the \textit{number and type of relations} associated with \textit{each} persona, as well as allow us to find commonalities in the types of persona themselves.
 
-To reach the desired representation, we execute Algorithm BLAH:
+To reach the desired representation, we execute this algorithm:
 
+\begin{verbatim}
 1 for each sentence in the poem:\\
 2   get the dependency relations and frame-semantic parse\\
-3	collapse loose leaves of the dependency relations\\
-4	find and create possible persona objects\\
-5	find candidate semantic relations from the frame-semantic parse\\
-6	for each character object:\\
-7		get all associated dependency relations\\
-8		for each associated dependency relation:\\
-9			if the dependent is involved in a candidate relation from the frame-semantic parse:\\
-10				bind the relation to the current character object and continue\\
-11			else:\\
-12				use the heuristics for dependency relations to find possible semantic relations\\
-13				bind any that are found to the current character object and continue\\
-				
+3   collapse loose leaves of the dependency relations\\
+4   find and create possible persona objects\\
+5   find candidate semantic relations from the frame-semantic parse\\
+6   for each character object:\\
+7       get all associated dependency relations\\
+8       for each associated dependency relation:\\
+9         if the dependent is involved in a candidate relation from the frame-semantic parse:\\
+10          bind the relation to the current character object and continue\\
+11		  else:\\
+12          use the heuristics for dependency relations to find possible semantic relations\\
+13			bind any that are found to the current character object and continue\\
+\end{verbatim}
+
 We will describe each step in detail.
 
 \subsubsection{Obtaining the Semantic Dependency Relations and Frame-Semantic Parse from Noah's ARK}
@@ -642,15 +650,17 @@ By default, the parent of the dependency keeps all its attributes unchanged exce
 \item{The \textit{pobj} and \textit{prep} dependency relations are evidence of prepositions, which often link words together that lose meaning when separated. For example, \textit{'of mice'} should retain the 'NNS' POS tag of \textit{'mice'} rather than keep the 'PRP' POS tag of \textit{'of'}.}
 \end{itemize}
 
-Then we follow Algorithm BLAH:\\
-1 Get a list of all the leaves in the graph.\\
-2 For each leaf in the reverse of this list:\\
-3	If the dependency relation of this leaf (i.e. from its parent to it) is collapsable:\\
-4		Get the parent\\
-5		Merge the form of the parent and the leaf\\
-6		If necessary, the parent retains the part-of-speech tag of the leaf\\
-7		The leaf is destroyed and the parent becomes the leaf.\\
-8		Loop back to line 3.\\
+Then we follow this algorithm:\\
+\begin{verbatim}
+1 get a list of all the leaves in the graph.\\
+2 for each leaf in the reverse of this list:\\
+3   if the dependency relation of this leaf (i.e. from its parent to it) is collapsable:\\
+4     get the parent\\
+5     merge the form of the parent and the leaf\\
+6     if necessary, the parent retains the part-of-speech tag of the leaf\\
+7     the leaf is destroyed and the parent becomes the leaf.\\
+8     loop back to line 3.\\
+\end{verbatim}
 
 Figure \ref{fig:cat-deps1-collapsed} shows a dry run of this algorithm on the first line of the cat poem as shown in Figure \ref{fig:cat-deps1}.
 
@@ -749,14 +759,16 @@ We can extend this practice to the final point of determining the animation of t
 
 Using the map between FrameNet frames and semantic relations mentioned in section \ref{sec:sema}, we can carry out Algorithm BLAH.
 
+\begin{verbatim}
 1 for each frame found in the frame-semantic parse:\\
-2	look up the target of the frame in the map\\
-3	if it can help build a relation:	\\
-4		retrieve the frame elements\\
-5		match the frame elements with the corresponding text from the poem\\
-6			if we cannot find all the elements we are looking for, we leave it blank\\
-7		add mapping from the text of the target to the newly built relation so we can find it later\\
-	
+2   look up the target of the frame in the map\\
+3   if it can help build a relation:	\\
+4     retrieve the frame elements\\
+5     match the frame elements with the corresponding text from the poem\\
+6       if we cannot find all the elements we are looking for, we leave it blank\\
+7     add mapping from the text of the target to the newly built relation so we can find it later\\
+\end{verbatim}
+
 Figure \ref{fig:cat1-fn-cn} show a dry run of this algorithm using the first half of the cat poem in Figure \ref{fig:cat}.
 
 \begin{figure}[H]
@@ -975,7 +987,7 @@ We repeat this process for each persona starting from the leftmost character in 
 \label{fig:second-hubs}
 \end{figure}
 
-Notice that the same \textit{mark} dependency with node \textit{[because (IN)]} is associated to both \textit{'he'} and \textit{'they'}. The \textit{[tasted so nice (JJ)]} node is also involved with both of them, although the type of dependency differs.
+Notice that the same \textit{mark} dependency with node \textit{because (IN)} is associated to both \textit{'he'} and \textit{'they'}. The \textit{tasted so nice (JJ)} node is also involved with both of them, although the type of dependency differs.
 
 In most cases, we do not want either of these duplicated dependencies as it can lead to redundant relations. We will deal with this in the next step where we convert these dependencies into relations.
 
@@ -1237,117 +1249,8 @@ We can see this entire process being applied step-by-step to the 'cat' persona i
 \label{fig:all-binded}
 \end{figure}
 
-\subsection{Context-Aware Anaphora and Presupposition Resolution}
-\label{sec:ar} \label{sec:common-sense}
-We can now clearly see the anaphora problem as described in Section \ref{sec:characters}. We must match up the \textit{'a cat'} character and \textit{'he'} character, and the \textit{'they'} character with the \textit{'a lot of mice'} character. 
+\subsubsection{Anaphora and Presupposition Resolution}
 
-In this particular example, we can simply match the plurals and singulars together. However, we may not always be so lucky as we can run into a situation where the cat could be referred to as \textit{'the feline'} instead of \textit{'he'}, for example.
-
-Section \ref{sec:arback} gives an overview of the state of the art solutions and notes that none of them use domain-specific knowledge. Our solution relies on \textbf{common sense} knowledge (which is domain-specific relative to our universe) as well as a deeper contextual awareness.
-
-We model common sense similarly to the semantic networks in Section \ref{sec:sem-net}. 
-
-\subsubsection{The Network}
-The primary purpose of our network is to help us build clauses out of one or two words. For this, we require our semantic network to give indications of \textbf{actions} that nouns take and receive, as well as properties they have.
-
-The secondary purpose of the network is to provide associative data so to maintain a cohesive topic flow through the poem, rather than jumping between a variety of topics. 
-
-\paragraph{Nodes}
-As with previous attempts, the nodes of the network are the concepts represented by words. However, we enrich these nodes with the POS of the word so to disambiguate between different meanings (e.g. \textit{bear} the noun and \textit{bear} the verb).
-
-\paragraph{Edges}
-The edges of the network indicate the relationship between concepts. The edges are directed and any that can be reversed are done so manually when they are added to the graph. The types of edges are:
-\begin{description}
-\item[HasProperty] \hfill \\ Stereotypical descriptions of the head of the relation. \hfill \\ doctor.n - HasProperty $\rightarrow$ smart.a \hfill \\ run.v - HasProperty $\rightarrow$ quickly.adv
-\item[IsA] \hfill \\ Taxonomy of the head of the relation (Hypernymy). \hfill \\ E.g. banana.n - IsA $\rightarrow$ fruit.n
-\item[PartOf] \hfill \\ The head of the relation typically a constituent or member of the tail.  \hfill \\ finger.n - PartOf $\rightarrow$ hand.n
-\item[TakesAction] \hfill \\The head of the relation typically performs the action in the tail. \hfill \\ lion.n - TakesAction $\rightarrow$ roar.v
-\item[ReceivesAction] \hfill \\The head of the relation typically has the action in the tail done unto it. \hfill \\ book.n - ReceivesAction $\rightarrow$ read.v
-\item[RelatedTo] \hfill \\ General, non-specific, reversible association \hfill \\ fat.a - ReceivesAction - eat.v \hfill \\ eat.v - ReceivesAction - pizza.n
-\end{description}
-
-All edges are of equal weight. However, there is potential for prioritising certain types of relations or between concepts. For example, we could weight scientific words higher than regular ones to make the program lean towards a more advanced vocabulary.
-
-
-\paragraph{Concept Halos and Fields}
-
-The Concept Halo and Field work in the same way as described in Section BLAHINTHEBG. We use them to fill in the gaps in the sentence with intelligent word selection. For example, if we are given a verb, we can lookup the Concept Field for that verb looking only at TakesAction and ReceivesAction edges to find possible subjects and objects for the verb respectfully. Similarly, we can find modifiers for verbs and nouns by looking up HasProperty edges their respective Concept Halos.
-
-\subsubsection{Sources}
-There are various sources for semantic relationships between words. Some are more applicable to our use case given the nature of relations that we desire and the quality of the source.
-
-There are many sources that we have not used only due to the scope of this project. We discuss them in Section BLAHINTHEEVAL.
-
-\paragraph{Collocations}
-The Oxford Collocations Dictionary[ref] is a high-quality source of word combinations. For any given word, it provides the set of words and POS commonly occur in relation to it.
-
-The dictionary entry for \textit{custard} can be seen in Figure BLAH. It gives common adjectives that are used to describe custard, which can clearly be converted into HasProperty Relations. It also shows that custard receives the action of being made, poured and strained, while it takes the actions of thickening and setting. Further, it is closely related to powder and pie.
-
-We can extract relations directly by parsing this dictionary, which is freely available online in compressed HTML format. As the dictionary is developed by Oxford and is used by students of English, its entries are very high quality and dependable.
-
-\paragraph{Associations}
-The University of South Florida Free Associated Norms[ref] provides associations collected directly from human participants. It is used by the Department of Psychology, and is therefore another high quality source of associated words that can be depended on for quality as it was collected in a scientifically sound manner.
-
-The POS of each word is provided but no direction in the association can be determined. Therefore, we may be able to assume that a noun has the property of an associated adjective and that an adjective is a property of associated nouns. However, we cannot assume the whether a noun takes or receives the action of an associated verb. Therefore we use the more general 'RelatedTo' relationship instead.
-
-\paragraph{NodeBox Perception}
-The NodeBox Perception model includes the data used in De Smedt's attempt to model common sense as a network, as discussed in Section BLAHINTHEBG. There is plenty of overlap in the types of semantic relations used in Perception as we will be using for this project, including 'is-a' (IsA), 'is-property-of' (reversed HasProperty), 'is-part-of' (PartOf) and 'is-related-to' (RelatedTo). We generalise all other relations to our \textit{RelatedTo} relation.
-
-This data was manually entered into the system and continues to be used for research, which means that it is a high-quality source of data.
-
-\paragraph{WordNet}
-Since WordNet is very large and already has fast and simple interfaces from Python, we do not merge its meronym (PartOf), hypernym and holonym (IsA) relations with our knowledge graph at this point. While it may prove useful to consolidate all data in a single graph in the future, it is not necessary at this stage as we can still benefit fully from its data without doing so.
-
-
-\paragraph{Google Search Suggestions}
-Tony Veale's attempt at modelling metaphors[ref] introduced a clever use of Google's search suggestions as a method of tapping in to endings of a sentence. While we currently do not preprocess relations in the way he did to produce Metaphor Magnet, we do use a similar method to help complete sentences, particularly those with indirect objects. 
-
-For example, we would be able to produce a sentence like 'Mary hit the nail with' but be unable to complete the sentence due to a lack of information of indirect objects. However, Google suggestions auto-complete 'hit the nail with' with 'hammer' as one might expect. 
-
-This is the least dependable source of information that we use, so we only use it for that specific case and do not add any to our knowledge network.
-
-
-\subsubsection{Concept Similarity}
-Similarity between concepts in the knowledge network is the primary method of guiding word choice throughout the poem. We deal with two main types of similarity; associative and symbolic.
-
-\paragraph{Associative Similarity}
-\label{sec:assoc-sim}
-Associative similarity between concepts is represented by the length of the shortest past between them in our network. We use Dijkstra's Algorithm[ref] as the basis of finding the shortest path.
-
-Associative similarity helps us choose the best replacement word from a list of candidates. This is very useful when rephrasing to match rhyme and rhythm and will be explained in greater detail in Section \ref{sec:rephrase}. 
-
-It can also help us choose applicable words to start new lines of poetry that stay within context of words used in surrounding lines. This is explained in Section \ref{sec:inc-growth}.
-
-In both of these cases, we are finding the \textit{most} similar concept from a list of candidates of unknown length. This can quickly increase both space and memory complexity without any pruning. We therefore alter Dijkstra's Algorithm to have a limited depth. This way, if we know the shortest path to one of the candidates is $x$, we can abort any further searches that go beyond length $x$ for the shortest path.
-
-\paragraph{Similarity Paths}
-Paths from one concept do more than show the extent of the relationship - it also shows intermediary concepts taken to get from one to the other. This can be a powerful way of joining two concepts together that may not be on consecutive lines.
-
-For example, suppose the first line of a poem mentions the concept \textit{'man.n'} and the third line \textit{'myth.n'} (Section \ref{sec:apply-inspr} explains how this could happen). The path in the knowledge network between these two concepts goes via the concept \textit{'mystery.n'}.
-
-
-\paragraph{Symbolic Similarity}
-Symbolic similarity can be attained through inductive reasoning and substitution by concepts that have a very similar concept halo and field up to a certain depth. Simply put, we can find similarity with the 'Duck Test'; if it looks like a duck, swims like a duck and quacks like a duck, it probably is a duck. Object-oriented programmers can relate this idea to the Liskov substitution principle[ref].
-
-Symbolic similarity has many use cases, including the new method of anaphora resolution proposed in Section BLAHINANALYSIS of the Analysis phase. For this phase, it enables us to implement the following poetic features:
-\begin{description}
-\item[Similes] \hfill \\ We can describe a property or an action of a persona in our poem by comparing the persona to an concept in our knowledge network that (stereotypically) has that property or takes/receives that action. \hfill \\ The relation \textit{1-TA$\rightarrow$run quickly} can be built into the phrase 'runs like a cheetah' by recognising that cheetahs are stereotypically quick runners.
-\item[Metaphors] \hfill \\ Similarly to Similes, we can find concepts in our network that share a number of semantic relations with the persona we are trying to describe. \hfill \\ Any persona with relations \textit{1-TakesAction$\rightarrow$crawl}, \textit{1-HasProperty$\rightarrow$social}, \textit{1-HasProperty$\rightarrow$small} is analogous to an insect because it's concept in the graph shares those relations.
-\item[Personification] \hfill \\ If we are given an inanimate object as a persona, we can describe it as if it were sentient by looking giving it relations that belong to a sentient being. \hfill \\ A car could be personified by giving it all the relations that a lion has in our concept network, to produce sentences like \textit{'The car roared'}.
-\item[Irony] \hfill \\ Our knowledge network is made up of semantic attributes that are expected for each concept. Irony can be attained by producing lines of poetry that describe a concept doing the opposite of the concepts given in our graph.
-\end{description} 
-
-
-\subsection{Inferring Properties and Capabilities}
-
-Combining the semantic network with our ability to identify persona and relations in text, we can make inferences on the properties and capabilities of the persona to resolve anaphora and presuppositions.
-
-Suppose we take the cat poem in Figure \ref{fig:cat}, but the word \textit{'he'} is replaced with \textit{'the feline'}. Since they are represented by different nouns, we would not initially recognise that \textit{'cat'} and \textit{'feline'} refer to the same persona. Once all the persona were found, if we compared each pair using our knowledge network, we would find the relation \textit{'cat.n'-IsA$\rightarrow$'feline.n'}. We can therefore infer with some confidence that the persona represented by the words \textit{'cat'} and \textit{'feline'} are one and the same.
-
-Take another example sentence:\\
-\textit{There was a cat with a flea on his back. It chased the mouse.}
-
-In this situation, it is ambiguous whether \textit{'It'} refers to the cat or the flea because they are both singular, animated and neutral gender. However, our semantic network of common sense would be able to reveal that \textit{'It'} probably refers to the cat since it is common sense that cats take the action of chasing mice.
 
 \section{Symbolism and Imagery}
 
@@ -1385,11 +1288,9 @@ These deductions are chosen manually. The full list is in the Appendix section \
 
 \subsection{Simile}
 
-Similes are relatively easy to detect because they often use the phrases 'like a' or 'as a' and 'than'. They also follow certain syntactical patterns, as in Figure BLAH.
+Similes are relatively easy to detect because they often use the phrases 'like a' or 'as a' and 'than'.
 
-Figure BLAH: in that it is usually a noun followed by a verb or adjective, then one of the aforementioned phrases, followed by a noun or an adjective.
-
-A particular symptom of simile use is that the aforementioned phrases will be involved in a prepositional noun phrase, or 'PNP Chunk' to use the parser terminology.
+A particular symptom of simile use is that the aforementioned phrases will be involved in a prepositional noun phrase, or \textit{PNP Chunk} to use the parser terminology.
 
 
 %%% ----------------------------------------------------------------------
